<resources>

    <string name="app_name">Gain Mass Manager</string>
    <string name="title_activity_halaman_utama">Halaman utama</string>
    <string name="action_settings">Settings</string>
    <string name="ui_tabname_rekomendasi">Rekomendasi</string>
    <string name="ui_tabname_statistik">Statistik</string>
    <string name="ui_tabname_laporan">Laporan</string>
    <string name="ui_tabname_katalog">Katalog</string>
    <string name="ui_tabname_profil">Profil</string>
    <string name="ui_tabname_artikel">Artikel</string>
    <string name="NS">http://schemas.android.com/apk/res/com.example.gamma</string>
    <string name="title_activity_setting_fragment">Setting</string>
    <string name="title_activity_notifikasi">Notifikasi</string>
    <string name="title_activity_tema">Tema</string>
    <string name="title_activity_tentang">Tentang</string>
    <string name="title_activity_kredit">Kredit</string>
    <string name="title_activity_edit_profil">Edit Profil</string>
    <string name="title_activity_detail_makanan">Detail Makanan</string>
    <string name="display_spinner">-pilih satu-</string>
    <string name="spinnerGayaHidup">Pilih Gaya Hidup</string>
    <string name="spinnerKelamin">Pilih Jenis Kelamin</string>
    <string name="lama_diet">Lama Diet</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="bantuan">Bantuan</string>

    <!-- Isi Bantuan -->
    <string name="setelah_mengisi_profil">Setelah mengisi profil, Anda dapat menjelajahi aplikasi untuk merasakan manfaatnya. Secara default, Anda akan dibawa ke halaman Rekomendasi. Jika Anda baru pertama kali menggunakan aplikasi ini, silahkan cek Bantuan untuk mendapatkan petunjuk lebih lanjut mengenai aplikasi ini.</string>
    <string name="penjelasan_menu">Aplikasi ini memiliki 8 menu utama : Rekomendasi, Profil, Statistik, Laporan, Katalog, Artikel, Achievement, dan Pengaturan. Rekomendasi berisi daftar makanan yang disarankan untuk dikonsumsi (selebihnya silahkan merujuk ke bagian "Mengenai Rekomendasi"). Profil digunakan untuk melihat atau mengedit profil Anda. Tidak ada satu pun data Anda yang dikirimkan keluar perangkat ini. Statistik berisi graf perbandingan progress diet Anda, antara perkiraan aplikasi dan kenyataan. Data nyata didapat dari laporan yang Anda isi pada menu Laporan. Laporan dapat diisi per 7 hari sekali, dan Anda dapat mengedit laporan yang terakhir Anda buat. Katalog berisi seluruh data makanan yang ada pada aplikasi. Anda dapat memberi rating pada makanan yang tersedia. Artikel berisi daftar artikel kesehatan yang dapat Anda baca. Artikel didapat dari situs luar, sehingga Anda perlu koneksi internet dan web browser untuk membaca artikel. Achievement berisi milestone Anda selama menggunakan aplikasi ini. Pengaturan berisi Notifikasi untuk mengingatkan Anda kapan harus makan, Reset Progress untuk menghapus progress dan data yang disimpan di aplikasi ini, beserta submenu lainnya.</string>
    <string name="mengenai_rekomendaasi">Rekomendasi dibuat berdasarkan data pribadi Anda : jumlah asupan kalori per hari. Ini didapat dari hasil kalkulasi internal pada aplikasi. Aplikasi akan menyediakan daftar makanan yang jumlah kalorinya sekitar jumlah asupan kalori harian Anda. Besar kalori harian dapat naik bila berat badan Anda menjauhi target, dan sebaliknya.</string>
    <string name="pertambahan_ideal">Aplikasi ini peduli dengan kesehatan Anda. Itu artinya ada batasan yang harus Anda perhatikan ketika merencanakan diet menambah berat badan dengan aplikasi ini, agar kenaikan berat Anda terjaga. Kami membatasi kenaikan hingga 1 kg per minggu.</string>
    <string name="koneksi_internet">Aplikasi ini dapat digunakan secara offline. Data Anda dan makanan, seluruhnya tersimpan di perangkat Anda. Anda hanya perlu koneksi internet ketika mengakses menu Artikel.</string>
    <string name="mengenai_notifikasi">Aplikasi ini dilengkapi notifikasi yang berguna untuk mengingatkan Anda kapan harus makan. Dalam keadaan awal, notifikasi diset mati. Anda dapat mengaktifkannya melalui submenu Notifikasi pada menu Pengaturan. Anda juga dapat mengatur waktunya masing-masing. Harap diketahui, jika perangkat Anda dalam keadaan mati atau mengalami restart, Anda perlu menjalankan aplikasi ini kembali agar notifikasi kembali aktif. Notifikasi hanya akan tampil di status bar, tanpa efek suara.</string>
    <string name="informasi_lebih_lanjut">Jika ada hal yang ingin diketahui lebih lanjut mengenai aplikasi ini, Anda dapat mengacu ke user manual Gain Mass Manager.</string>
    
    <string-array name="isi_durasi">
        <item>1 Minggu</item>
        <item>2 Minggu</item>
        <item>4 Minggu</item>
        <item>8 Minggu</item>
    </string-array>

    <string name="sangat_aktif">Sangat Aktif</string>

    <string-array name="isi_gayaHidup">
        <item>Jarang Sekali</item>
        <item>Sedikit Aktif</item>
        <item>Aktif</item>
        <item>Sangat Aktif</item>
    </string-array>
    <string-array name="isi_aktivitas">
        <item>Jogging</item>
        <item>Belajar</item>
    </string-array>

    <string name="edit_profil">Edit Profil</string>
    <string name="info_personal">Info Personal</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="umur_anda">Umur Anda</string>
    <string name="tahun">tahun</string>
    <string name="berat_sekarang">Berat Sekarang</string>
    <string name="kg">kg</string>
    <string name="berat_target">Berat Target</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="konfirmasi_rss">Apakah Anda yakin akan membaca artikel ini? Artikel selengkapnya akan muncul pada jendela web browser Anda.</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Rekomendasi</item>
        <item>Profil</item>
        <item>Statistik</item>
        <item>Laporan</item>
        <item>Katalog</item>
        <item>Artikel</item>
        <item>Achievement</item>
        <item>Pengaturan</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/rekomendasi</item>
        <item>@drawable/profil</item>
        <item>@drawable/statistik</item>
        <item>@drawable/laporan</item>
        <item>@drawable/katalog</item>
        <item>@drawable/artikel</item>
        <item>@drawable/achievement</item>
        <item>@drawable/pengaturan</item>
    </array>
    <!--  -->


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_rssfragment">RSSFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="title_activity_detail_statistik">Detail</string>
	<string name="title_activity_isi_laporan">Isi Laporan</string>
	<string name="title_activity_edit_laporan">Edit Laporan</string>
	<string name="konfirmasi_reset">Apakah Anda yakin akan mereset progress Anda? Data profil, laporan, notifikasi, dan achievement Anda akan terhapus.</string>
	<string name="sukses_reset">Reset progress berhasil. Silahkan isi kembali profil Anda.</string>
	<string name="konfirmasi_firstrun">&quot;Selamat datang di Gain Mass Manager. Demi pengalaman pemakaian yang maksimal, Anda diharapkan untuk melengkapi profil pribadi terlebih dahulu.&quot;</string>
	<string name="makanan_pokok">Makanan Pokok</string>
</resources>