<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/abu"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditProfilActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/editFoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.67"
            android:background="@drawable/foto_edit" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/info_personal"
            android:textStyle="bold"
            android:textSize="18sp" />

        

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
            				android:id="@+id/editNama"
            				android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:layout_weight="0.67"
            				android:ems="10"
            				android:inputType="textPersonName" 
            				android:hint="@string/nama_anda">
							<requestFocus />
        				</EditText>
                        
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
            				android:id="@+id/editUmur"
            				android:layout_width="120dp"
            				android:layout_height="wrap_content"
            				android:layout_weight="0.67"
            				android:ems="10"
            				android:inputType="number" 
            				android:hint="@string/umur_anda">
							<requestFocus />
        				</EditText>

                        <TextView
                            android:id="@+id/textTahun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginRight="10dp"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="@string/tahun" />

                        <Spinner
                            android:id="@+id/spinnerKelamin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.67"
                            android:background="@drawable/spinner_normal_holo"
                            android:prompt="@string/spinnerKelamin" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/editTinggi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="numberDecimal"
                            android:hint="Tinggi Anda" />

                        <TextView
                            android:id="@+id/textKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_marginRight="10dp"
                            android:text="cm" />

                        <EditText
                            android:id="@+id/editBeratSekarang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="numberDecimal"
                            android:hint="Berat Anda" />

                        <TextView
                            android:id="@+id/textKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="@string/kg" />
                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/editDurasiDiet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="Durasi Diet"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textMinggu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginRight="10dp"
                            android:text="minggu"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editBeratTarget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="Berat Target"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="@string/kg" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                       <Spinner
                			android:id="@+id/spinnerGayaHidup"
                			android:layout_width="wrap_content"
                			android:layout_height="wrap_content"
                			android:layout_weight="0.67"
                			android:background="@drawable/spinner_normal_holo"
                			android:prompt="@string/spinnerGayaHidup" />
                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                       
                        <TextView
            				android:id="@+id/textPenjelasanGaya"
            				android:layout_width="wrap_content"
           					android:layout_height="160dp"
            				android:layout_marginTop="10dp"
            				android:layout_weight="0.67"
            				android:background="@drawable/border"
            				android:paddingTop="18dp"
            				android:paddingLeft="40dp"
            				android:paddingRight="40dp"
            				android:text="Pilih salah satu jenis gaya hidup untuk melihat detailnya disini" />
                        </LinearLayout>
                </LinearLayout>

        <RadioGroup
            android:id="@+id/editGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioGroup>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:text="Data Tambahan (Opsional)" />

        <CheckBox
            android:id="@+id/editVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:text="Vegetarian" />

        <CheckBox
            android:id="@+id/editIkan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:text="Alergi Makanan Laut" />

        <CheckBox
            android:id="@+id/editKacang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:text="Alergi Kacang-kacangan" />

        

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp" >

            <Button
                android:id="@+id/simpanProfilBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginRight="20dp"
                android:background="@drawable/yes_button" />

            <Button
                android:id="@+id/batalProfilBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:background="@drawable/no_button" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>